# librealsense

./: .gitignore
RealtimeBreathing/: CMakeLists.txt  README.md  RealtimeBreathing.vcxproj  RealtimeBreathing.vcxproj.filters  config.txt  log.txt  rb-gui.cpp  rb_aux.cpp  rb_aux.h  utilities.h
RealtimeBreathing/Debug/: vc141.idb
RealtimeBreathing/Realtimebreathing.dir/Debug/: vc141.idb
RealtimeBreathing/x64/Debug/: vc141.idb
common/: model-views.cpp  ux-window.cpp  viewer.cpp
examples/align/: CMakeLists.txt  rs-align.cpp
tools/realsense-viewer/: realsense-viewer.cpp
wrappers/csharp/Intel.RealSense/: NativeMethods.cs
x64/Debug/: vc141.idb
